# Youtube-List-Downloader

./: .travis.yml  README.md  appveyor.yml  conanfile.py
.travis/: install.sh
package/: CMakeLists.txt
package/cmake/: YoutubeListDownloader-config.cmake
package/include/YoutubeListDownloader/: logger.h
package/include/YoutubeListDownloader/download/: downloader.h  options.h
package/include/YoutubeListDownloader/sql/: dbs.h
package/include/YoutubeListDownloader/utils/: downloader.h  fs.h  working_queue.h
package/include/YoutubeListDownloader/youtube/: channel.h  format.h  playlist.h  video.h  video_list.h  youtube.h
package/lib/nowide_standalone/: CMakeLists.txt
package/lib/nowide_standalone/src/: iostream.cpp
package/src/YoutubeListDownloader/download/: downloader.cpp
package/src/YoutubeListDownloader/sql/: dbs.cpp
package/src/YoutubeListDownloader/utils/: downloader.cpp  working_queue.cpp
package/src/YoutubeListDownloader/youtube/: channel.cpp  playlist.cpp  video.cpp  video_list.cpp
test_package/: CMakeLists.txt  conanfile.py  test.cpp
